<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".TipCalculatorActivity">

        <TextView
            android:id="@+id/textCheckAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginVertical="@dimen/_20sdp"
            android:text="@string/check_amount"
            android:textColor="@color/color_gray"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/checkAmountValue"
            app:layout_constraintTop_toTopOf="@+id/checkAmountValue">

        </TextView>

        <EditText
            android:id="@+id/checkAmountValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginVertical="@dimen/_20sdp"
            android:inputType="number"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textCheckAmount"
            app:layout_constraintTop_toTopOf="parent">

        </EditText>

        <TextView
            android:id="@+id/textPartySize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginVertical="@dimen/_20sdp"
            android:text="@string/party_size"
            android:textColor="@color/color_gray"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintBottom_toBottomOf="@+id/partySizeValue"
            app:layout_constraintTop_toTopOf="@+id/partySizeValue"
            app:layout_constraintStart_toStartOf="parent">

        </TextView>

        <EditText
            android:id="@+id/partySizeValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginVertical="@dimen/_20sdp"
            android:inputType="number"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textCheckAmount"
            app:layout_constraintTop_toBottomOf="@+id/textCheckAmount">

        </EditText>

        <android.widget.Button
            android:id="@+id/buttonCompute"
            android:padding="@dimen/_12sdp"
            android:text="@string/compute_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_8sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintTop_toBottomOf="@+id/partySizeValue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        </android.widget.Button>


        <TextView
            android:id="@+id/tips_totals"
            android:text="@string/tips_and_totals_per_person"
            android:textAlignment="center"
            android:textSize="@dimen/_22ssp"
            android:textColor="@color/black"
            android:layout_marginVertical="@dimen/_24sdp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonCompute">

        </TextView>


        <LinearLayout
            android:id="@+id/line1"
            android:orientation="horizontal"
            android:weightSum="7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tips_totals"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginVertical="@dimen/_16sdp">

            <TextView
                android:layout_gravity="center_vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.1"
                android:textSize="@dimen/_14sdp"
                android:text="@string/tip"
                android:textColor="@color/color_gray">

            </TextView>


            <TextView
                android:layout_gravity="center_vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".9"
                android:textSize="@dimen/_14sdp"
                android:text="@string/fifteen"
                android:textColor="@color/color_gray">

            </TextView>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/fifteenPercentTipValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_18sdp"
                    android:textColor="@color/black">

                </TextView>

                <View
                    android:background="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="1dp">
                </View>
            </LinearLayout>

            <TextView
                android:layout_gravity="center_vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/_14sdp"
                android:text="@string/twenty"
                android:textColor="@color/color_gray">

            </TextView>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/twentyPercentTipValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_18sdp"
                    android:textColor="@color/black">

                </TextView>

                <View
                    android:background="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="1dp">
                </View>
            </LinearLayout>

            <TextView
                android:layout_gravity="center_vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/_14sdp"
                android:text="@string/twenty_five"
                android:textColor="@color/color_gray">

            </TextView>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/twentyfivePercentTipValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_18sdp"
                    android:textColor="@color/black">

                </TextView>

                <View
                    android:background="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="1dp">
                </View>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/line2"
            android:orientation="horizontal"
            android:weightSum="7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/line1"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginVertical="@dimen/_24sdp">

            <TextView
                android:layout_gravity="center_vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.1"
                android:textSize="@dimen/_14sdp"
                android:text="@string/total"
                android:textColor="@color/color_gray">

            </TextView>


            <TextView
                android:layout_gravity="center_vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".9"
                android:textSize="@dimen/_14sdp"
                android:text="@string/fifteen"
                android:textColor="@color/color_gray">

            </TextView>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/fifteenPercentTotalValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_18sdp"
                    android:textColor="@color/black">

                </TextView>

                <View
                    android:background="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="1dp">
                </View>
            </LinearLayout>

            <TextView
                android:layout_gravity="center_vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/_14sdp"
                android:text="@string/twenty"
                android:textColor="@color/color_gray">

            </TextView>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/twentyPercentTotalValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_18sdp"
                    android:textColor="@color/black">

                </TextView>

                <View
                    android:background="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="1dp">
                </View>
            </LinearLayout>

            <TextView
                android:layout_gravity="center_vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/_14sdp"
                android:text="@string/twenty_five"
                android:textColor="@color/color_gray">

            </TextView>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/twentyfivePercentTotalValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_18sdp"
                    android:textColor="@color/black">

                </TextView>

                <View
                    android:background="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="1dp">
                </View>
            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>